add script.js, connect to index.html, connect to style.css

--- a/index.html
+++ b/index.html
@@ -2,10 +2,151 @@
 <html lang = "en">
 <head>
     <link rel = "stylesheet" href = "style.css" />
-    <title>My Website</title>
+    <title>Marlena's Dog Website</title>
 </head>
 <body>
-    <h1>Hello World!</h1>
-</body>
+    <h1>Welcome to my Dog Website</h1>
+<section id = "intro">
+    <p>This website demonstrates the knowledge I've learned during Flatiron's Software Engineering 
+        "Prework" Program. I've learned about HTML, CSS, and JavaScript and how each is used in 
+        creating websites. This website is structured with HTML, and the various fonts, colors, and styling
+        are applied using CSS. Finally, the bit of interactivity on this website is all thanks to JavaScript. :)
+    </p>
+    <p>
+        Below, I have some groups of dogs that you may have come across. To learn more about each kind of dog breed, 
+        click on the image and more information will appear! You will also notice that I have some different types of 
+        of groups listed as buttons; clicking on a button will giv eyou a different group of dogs to view.
+    </p>
+</section>
+<section>
+    <div id = "buttons">
+        <button id="herdButton" class="blue round-borders">Herding Group</button>
+        <button id="houndButton" class="blue round-borders">Hound Group</button>
+        <button id="terrierButton" class="blue round-borders">Terrier Group</button>
+    </div>
 
+    <div id = "herdingGroup">
+        <div class = "figures">
+            <img
+              src = "https://i.imgur.com/zSLudjY.jpg"
+              alt = "Border Collie Puppy"
+              class = "hover-shadow"
+            >
+            <p>
+             A remarkably bright workaholic, the Border Collie is an amazing dog'maybe a bit too amazing for owners without the time, energy, or means to keep it occupied. 
+             These energetic dogs will settle down for cuddle time when the workday is done.<br>
+             Borders are athletic, medium-sized herders standing 18 to 22 inches at the shoulder. 
+             The overall look is that of a muscular but nimble worker unspoiled by passing fads. Both the rough coat and the smooth coat come in a variety of colors and patterns. 
+             The almond eyes are the focus of an intelligent expression'an intense gaze, the Border's famous 'herding eye', is a breed hallmark. 
+             On the move, Borders are among the canine kingdom's most agile, balanced, and durable citizens. The intelligence, athleticism, and trainability of Borders have a perfect outlet in agility training. 
+             Having a job to perform, like agility'or herding or obedience work'is key to Border happiness. Amiable among friends, they may be reserved with strangers.
+            </p>
+        </div>
+        <div class = "figures">
+            <img
+            src="https://i.imgur.com/buOuheT.jpg"
+            alt="Canaan Dog"
+            class="hover-shadow"
+            >
+            <p>
+             The Canaan Dog is the national dog of Israel. This quick, medium-sized pasture dog is docile with family, aloof with strangers. 
+             The ever-alert Canaan is a vocal and persistent guardian of flock and home. <br>
+             Canaan Dogs are lean, bushy-tailed dogs standing 19 to 24 inches at the shoulder. 
+             The coat is straight and harsh, and comes in various colors and patterns. Erect, expressive ears and dark almond eyes convey an inquisitive expression. 
+             Canaans move at a brisk, natural trot. They are rugged, agile, and apparently tireless, making them a nice fit for hikers and runners. 
+             Canaans are clever, confident, and territorial. They will end up "owning" passive owners who haven't establish themselves as top dog in the family pack. 
+             Early training and socialization are key. When positive methods are applied, these ancient wonder-dogs train beautifully. Agility, obedience, herding trials, and sentry duty are a few outlets for their work ethic.
+            </p>
+        </div>
+        <div class = "figures">
+            <img
+            src="https://i.imgur.com/TBE6bnC.jpg"
+            alt="3 German Shepherd Puppies"
+            class = "hover-shadow"
+            >
+            <p>
+             Generally considered dogkind's finest all-purpose worker, the German Shepherd Dog is a large, agile, muscular dog of noble character and high intelligence. 
+             Loyal, confident, courageous, and steady, the German Shepherd is truly a dog lover's delight. <br>
+             German Shepherd Dogs can stand as high as 26 inches at the shoulder and, when viewed in outline, presents a picture of smooth, graceful curves rather than angles. 
+             The natural gait is a free-and-easy trot, but they can turn it up a notch or two and reach great speeds. There are many reasons why German Shepherds stand in the front rank of canine royalty, 
+             but experts say their defining attribute is character: loyalty, courage, confidence, the ability to learn commands for many tasks, and the willingness to put their life on the line in defense of loved ones. 
+             German Shepherds will be gentle family pets and steadfast guardians, but, the breed standard says, there's a 'certain aloofness that does not lend itself to immediate and indiscriminate friendships.
+            </p>
+        </div>
+    </div>
+
+    <div id = "houndGroup">
+      <div class = "figures">
+        <img 
+        src="https://i.imgur.com/YZH9Xdi.jpg"
+        alt = "Beagle"
+        class = "hover-shadow"
+        >
+        <p>
+            Not only is the Beagle an excellent hunting dog and loyal companion, it is also happy-go-lucky, funny, and'thanks to its pleading expression'cute. They were bred to hunt in packs, so they enjoy company and are generally easygoing.<br>
+            There are two Beagle varieties: those standing under 13 inches at the shoulder, and those between 13 and 15 inches. Both varieties are sturdy, solid, and 'big for their inches,' as dog folks say. 
+            They come in such pleasing colors as lemon, red and white, and tricolor. The Beagle's fortune is in his adorable face, with its big brown or hazel eyes set off by long, houndy ears set low on a broad head. 
+            A breed described as 'merry' by its fanciers, Beagles are loving and lovable, happy, and companionable'all qualities that make them excellent family dogs. No wonder that for years the Beagle has been the most popular hound dog among American pet owners. 
+            These are curious, clever, and energetic hounds who require plenty of playtime.
+        </p>
+      </div>
+      <div class = "figures">
+        <img
+        src="https://i.imgur.com/jBBEnae.jpg"
+        alt="Bloodhound Puppy"
+        class="hoover-shadow"
+        >
+        <p>
+            The world famous 'Sleuth Hound' does one thing better than any creature on earth: find people who are lost or hiding. An off-duty Bloodhound is among the canine kingdom's most docile citizens, but he's relentless and stubborn on scent. <br>
+            Bloodhounds are large, substantial dogs standing 23 to 27 inches at the shoulder and weighing up to 110 pounds. Their most famous features are a long, wrinkled face with loose skin; huge, drooping ears; and warm, deep-set eyes 
+            that complete an expression of solemn dignity. Coat colors can be black and tan, liver and tan, or red. Powerful legs allow Bloodhounds to scent over miles of punishing terrain. As pack dogs, Bloodhounds enjoy company, including 
+            other dogs and kids. They are easygoing, but their nose can sometimes lead them into trouble. A strong leash and long walks in places where they can enjoy sniffing around are recommended. Bloodhounds are droolers, and obedience 
+            training these sensitive sleuths can be a challenge.
+        </p>
+      </div>
+    </div>
+
+    <div id = "terrierGroup">
+     <div id = "figures">
+        <img
+        src="https://i.imgur.com/WFafngx.jpg"
+        alt="American Jack Russell Terrier"
+        class = "hoover-shadow"
+        >
+        <p>
+            Upbeat, lively, inquisitive, and friendly, the jaunty Russell Terrier was developed by England's "Sporting Parson" for use in foxhunts. The adorable Russell Terrier looks like a plush toy come to life but is an eager, tireless working terrier. <br>
+            These jaunty little fellows pack lots of personality into a compact, rectangular body standing 10 to 12 inches at the shoulder. Their dark, almond-shaped eyes and mobile V-shaped ears bring out the keenly intelligent expression'an endearing hallmark 
+            of the breed. All three coat types are mostly white with markings that are tan or black, or both. Russells move with a free, effortless gait that announces the breed's innate confidence.
+        </p>
+    </div>
+    <div class = "figures">
+     <img
+      src="https://i.imgur.com/gyFxc5u.jpg"
+      alt="American Staffordshire Terrier Puppy"
+      class = "hoover-shadow"
+     >
+        <p>
+        The American Staffordshire Terrier, known to their fans as AmStaffs, are smart, confident, good-natured companions. Their courage is proverbial. A responsibly bred, well-socialized AmStaff is a loyal, trustworthy friend to the end. <br>
+        AmStaffs are stocky, muscular bull-type terriers standing 17 to 19 inches at the shoulder. The head is broad, the jaws well defined, the cheekbones pronounced, and the dark, round eyes are set wide apart. AmStaff movement is agile and graceful, 
+        with a springy gait that advertises the breed's innate confidence. The stiff, glossy coat comes in many colors and patterns. AmStaffers describe their dogs as keenly aware of their surroundings, game for anything, and lovable 'personality dogs' 
+        around the house. AmStaffs like mental and physical challenges. They are highly trainable, as their many forays into showbiz suggest.
+        </p>
+    </div>
+</div>
+    <div id="lightbox">
+        <span id="close" class="close cursor">&times;</span>
+        <div id="lightbox-content">
+        </div>
+    </div>
+</section>    
+<footer>
+    <h1>Sources:</h1>
+    <p>
+        <a href="https://www.masterclass.com/articles/dog-breed-guide#what-are-the-7-major-dog-groups"
+        alt="Master Class Article">Master Class staff Article</a>
+        <a href= "https://www.akc.org/" alt= "AKC Organization">AKC Organization</a>
+    </p>
+</footer>
+<script src="script.js"></script>
+</body>
 </html>
