Completed JavaScript files

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </div>
 
     <div id = "herdingGroup">
-        <div class = "figures">
+        <div class = "figure">
             <img
               src = "https://i.imgur.com/zSLudjY.jpg"
               alt = "Border Collie Puppy"
@@ -42,7 +42,7 @@
              Having a job to perform, like agility'or herding or obedience work'is key to Border happiness. Amiable among friends, they may be reserved with strangers.
             </p>
         </div>
-        <div class = "figures">
+        <div class = "figure">
             <img
             src="https://i.imgur.com/buOuheT.jpg"
             alt="Canaan Dog"
@@ -58,7 +58,7 @@
              Early training and socialization are key. When positive methods are applied, these ancient wonder-dogs train beautifully. Agility, obedience, herding trials, and sentry duty are a few outlets for their work ethic.
             </p>
         </div>
-        <div class = "figures">
+        <div class = "figure">
             <img
             src="https://i.imgur.com/TBE6bnC.jpg"
             alt="3 German Shepherd Puppies"
@@ -76,7 +76,7 @@
     </div>
 
     <div id = "houndGroup">
-      <div class = "figures">
+      <div class = "figure">
         <img 
         src="https://i.imgur.com/YZH9Xdi.jpg"
         alt = "Beagle"
@@ -90,11 +90,11 @@
             These are curious, clever, and energetic hounds who require plenty of playtime.
         </p>
       </div>
-      <div class = "figures">
+      <div class = "figure">
         <img
         src="https://i.imgur.com/jBBEnae.jpg"
         alt="Bloodhound Puppy"
-        class="hoover-shadow"
+        class="hover-shadow"
         >
         <p>
             The world famous 'Sleuth Hound' does one thing better than any creature on earth: find people who are lost or hiding. An off-duty Bloodhound is among the canine kingdom's most docile citizens, but he's relentless and stubborn on scent. <br>
@@ -107,11 +107,11 @@
     </div>
 
     <div id = "terrierGroup">
-     <div id = "figures">
+     <div class = "figure">
         <img
         src="https://i.imgur.com/WFafngx.jpg"
         alt="American Jack Russell Terrier"
-        class = "hoover-shadow"
+        class = "hover-shadow"
         >
         <p>
             Upbeat, lively, inquisitive, and friendly, the jaunty Russell Terrier was developed by England's "Sporting Parson" for use in foxhunts. The adorable Russell Terrier looks like a plush toy come to life but is an eager, tireless working terrier. <br>
@@ -119,11 +119,11 @@
             of the breed. All three coat types are mostly white with markings that are tan or black, or both. Russells move with a free, effortless gait that announces the breed's innate confidence.
         </p>
     </div>
-    <div class = "figures">
+    <div class = "figure">
      <img
       src="https://i.imgur.com/gyFxc5u.jpg"
       alt="American Staffordshire Terrier Puppy"
-      class = "hoover-shadow"
+      class = "hover-shadow"
      >
         <p>
         The American Staffordshire Terrier, known to their fans as AmStaffs, are smart, confident, good-natured companions. Their courage is proverbial. A responsibly bred, well-socialized AmStaff is a loyal, trustworthy friend to the end. <br>
@@ -144,6 +144,8 @@
     <p>
         <a href="https://www.masterclass.com/articles/dog-breed-guide#what-are-the-7-major-dog-groups"
         alt="Master Class Article">Master Class staff Article</a>
+    </p>
+    <p>
         <a href= "https://www.akc.org/" alt= "AKC Organization">AKC Organization</a>
     </p>
 </footer>
